--- a/src/main/java/Janelas/CadastroProduto.form
+++ b/src/main/java/Janelas/CadastroProduto.form
@@ -76,11 +76,11 @@
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="jTDescricao" max="32767" attributes="0"/>
                               <Group type="102" attributes="0">
-                                  <Component id="jTQuantidade" min="-2" pref="27" max="-2" attributes="0"/>
-                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                  <Component id="jTQuantidade" max="32767" attributes="0"/>
+                                  <EmptySpace max="-2" attributes="0"/>
                                   <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="jTValor" max="32767" attributes="0"/>
+                                  <Component id="jTValor" min="-2" pref="159" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
